Included the logic for a lightweight auth for this project that takes a user email and password and uses this to determine the "owner" of the data so that the correct data will be returned in responses.
