# src/main/java/com/sethhaskellcondie/thegamepensieveapi/domain/auth/RefreshRequestDto.java
@@ -1,0 +1,4 @@
+package com.sethhaskellcondie.thegamepensieveapi.domain.auth;
+
+public record RefreshRequestDto(String refreshToken) {
+}
