# src/main/java/com/sethhaskellcondie/thegamepensieveapi/domain/auth/RefreshToken.java
@@ -1,0 +1,6 @@
+package com.sethhaskellcondie.thegamepensieveapi.domain.auth;
+
+import java.sql.Timestamp;
+
+public record RefreshToken(int id, int userId, String tokenHash, Timestamp expiresAt, boolean revoked) {
+}
